--- a/app/entries.haml
+++ b/app/entries.haml
@@ -57,7 +57,7 @@
               %a#pills-contact-tab.nav-link--tabs{:href => "#v-pills-contact" ,'data-toggle'=>"pill",:role=>"tab",'aria-controls'=>"v-pills-contact" ,'aria-selected'=>"true"} juice bar
           .btn__tabs
             %a.btn-btn_custom.btn--large.btn--filled.btn--filled-gray{:href => "createpokebolw.html"} 
-              %img{ :src => "assets/img/Home/R Rappi.svg"}/
+              %img{ :src => "assets/img/Menu_entradas/Bowl.svg"}/
               %span.line
               ARMA TU BOWL
         %hr.line-gray.line-gray--entries
