--- a/app/event.haml
+++ b/app/event.haml
@@ -22,7 +22,7 @@
           .navbar-collapse.offcanvas-collapse
             %ul.navbar-nav.mr-autos
               %li.nav-item.active
-                %a.nav-link{:href => "entries.html"} Menu
+                %a.nav-link.nav-link-bc{:href => "entries.html"} Menu
               %li.nav-item
                 %a.nav-link.nav-link-bc{:href => "about.html"} Nosotros
               %li.nav-item
@@ -41,6 +41,7 @@
                       %span.line
                       Pide en línea
     .main-about.main-about__height.main-about__mt{ :style=>"background-image: url('assets/img/Home/POKE_-245.png');"}
+      .mask
       .container
         .main-why__content
           .main-why__item
