--- a/app/index.haml
+++ b/app/index.haml
@@ -49,7 +49,8 @@
               .main-banner__boxtext
                 .main-banner__text
                   .main-banner__title
-                    %h1 Pura Sabrosura
+                    %h1 Pura 
+                    %h1 Sabrosura
                   .btn-box
                     %a.btn_custom.btn--large.btn--filled{ :href=>"entries.html"}
                       Menú
@@ -113,6 +114,7 @@
           %h3 eat better, feel better
   
     .main-about.main-about__height{ :style=>"background-image: url('assets/img/Home/POKE_-245.png');"}
+      .mask
       .container
         .main-why__content
           .main-why__item
