--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -9,7 +9,7 @@
   outline: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  border-radius: 3px;
+  border-radius: 4px;
   -webkit-transition: color .2s ease-in-out,
     background-color .2s ease-in-out,
     border-color .2s ease-in-out;
@@ -31,15 +31,16 @@
 }
 
 .btn--medium {
-  padding: 10px 8px;
-  min-width: 85px;
+  padding: 5px 8px;
+  // min-width: 85px;
   font-size: 17px;
+
 }
 
 .btn--large {
-  padding: 12px 30px;
-  min-width: 105px;
-  font-size: 20px;
+  padding: 5px 15px;
+  /* min-width: 105px; */
+  font-size: 23px;
 
   @include respond-to(sm) {
     padding: 8px 8px;
@@ -57,19 +58,20 @@ button {
 }
 
 .btn--filled {
-  color: $black;
+  color: #4A4A4A;
   background: $white;
   transition: 0.3s ease-in-out;
   text-decoration: none;
-  display: flex;
-  justify-content: center;
-  text-transform: uppercase;
-  font-weight: $superBold;
+  // display: flex;
+  // justify-content: center;
+  // text-transform: uppercase;
+  // font-weight: $superBold;
+  // letter-spacing: 1.6px;
 
   &:hover {
     text-decoration: none;
     background: $white;
-    color: $black;
+    color: #4A4A4A;
     -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
@@ -163,7 +165,8 @@ button {
 }
 
 .btn-box--about {
-  width: 150px;
+  width: 100px;
+  margin-top: 10px;
 }
 
 .btn-form__center {
