--- a/app/scss/_setting-slick.scss
+++ b/app/scss/_setting-slick.scss
@@ -25,6 +25,10 @@
     z-index: 2;
     top: 93%;
 
+    @include respond-to(sm) {
+      right: 33%;
+    }
+
 
     &:before {
       font-size: $arrow-size;
