Add text 2 line

--- a/app/index.haml
+++ b/app/index.haml
@@ -61,8 +61,9 @@
             .container
               .main-banner__boxtext
                 .main-banner__text
-                  .main-banner__title
-                    %h1 new bowls
+                  .main-banner__title.title-color-gray
+                    %h1 new 
+                    %h1 bowls
                   .btn-box
                     %a.btn_custom.btn--large.btn--filled{ :href=>"#"}
                       PIDE AQUÍ
@@ -74,7 +75,8 @@
               .main-banner__boxtext
                 .main-banner__text
                   .main-banner__title
-                    %h1 cultivando el cambio
+                    %h1 cultivando 
+                    %h1 el cambio
                   .btn-box
                     %a.btn_custom.btn--large.btn--filled{ :href=>"about.html"}
                       nosotros
@@ -86,7 +88,8 @@
               .main-banner__boxtext
                 .main-banner__text
                   .main-banner__title
-                    %p the poke generation
+                    %h1 the poke 
+                    %h1 generation
                   .btn-box
                     %a.btn_custom.btn--large.btn--filled{ :href=>"#"}
                       ubicaciones
