--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -48,7 +48,7 @@
 
   @include respond-to(xs) {
     padding: 12px 18px;
-    min-width: 105px;
+    // min-width: 105px;
     font-size: 20px;
   }
 }
