--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -12,6 +12,10 @@
   .container {
     z-index: 999;
     margin-top: 130px;
+
+    @include respond-to(xs) {
+      margin-top: 0;
+    }
   }
 
 
@@ -100,6 +104,11 @@
         margin: 0;
         font-family: $Raleway;
         text-transform: uppercase;
+
+        @include respond-to(sm) {
+          @include font(30px, $semibold);
+          padding: 0;
+        }
 
         @include respond-to(xs) {
           @include font(18px, $semibold);
