--- a/app/entries.haml
+++ b/app/entries.haml
@@ -164,7 +164,7 @@
           .main-footer__item
             .main-footer__box
               .main-footer__logo
-                %img{ :src => "assets/img/Home/poke bowls.svg"}/
+                %img{ :src => "assets/img/Home/Logo poke.svg"}/
               .main-footer__boxsmall
                 .main-footer__boxitem
                   %img{ :src => "assets/img/Home/Endeavor.svg"}/
