--- a/app/experience.haml
+++ b/app/experience.haml
@@ -135,7 +135,7 @@
           .main-footer__item
             .main-footer__box
               .main-footer__logo
-                %img{ :src => "assets/img/Home/poke bowls.svg"}/
+                %img{ :src => "assets/img/Home/Logo poke.svg"}/
               .main-footer__boxsmall
                 .main-footer__boxitem
                   %img{ :src => "assets/img/Home/Endeavor.svg"}/
@@ -154,10 +154,10 @@
                   %a{ :href=>"#"}
                     ESCRÍBENOS
                 %li 
-                  %a{ :href=>"#"}
+                  %a{ :href=>"work.html"}
                     TRABAJA CON NOSOTROS
                 %li 
-                  %a{ :href=>"#"}
+                  %a{ :href=>"experience.html"}
                     CUÉNTANOS TU EXPERIENCIA
                 %li 
                   %a{ :href=>"#"}
