--- a/app/index.haml
+++ b/app/index.haml
@@ -169,7 +169,7 @@
           .main-footer__item
             .main-footer__box
               .main-footer__logo
-                %img{ :src => "assets/img/Home/poke bowls.svg"}/
+                %img{ :src => "assets/img/Home/Logo poke.svg"}/
               .main-footer__boxsmall
                 .main-footer__boxitem
                   %img{ :src => "assets/img/Home/Endeavor.svg"}/
@@ -188,7 +188,7 @@
                   %a{ :href=>"#"}
                     ESCRÍBENOS
                 %li 
-                  %a{ :href=>"#"}
+                  %a{ :href=>"work.html"}
                     TRABAJA CON NOSOTROS
                 %li 
                   %a{ :href=>"#"}
