--- a/app/scss/_entries.scss
+++ b/app/scss/_entries.scss
@@ -67,11 +67,17 @@
 .nav-pills {
   border-bottom: 1px solid transparent;
 
+  @include respond-to(xs) {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
   .nav-link--tabs {
     transition: 0.3s ease-in-out;
-    @include font(20px, $bold);
+    @include font(25px, $bold);
     text-transform: uppercase;
-    font-family: $Raleway;
+    font-family: $Ostrich;
     border: 4px solid transparent;
     color: #B4B4B4;
     padding: 10px;
@@ -81,7 +87,7 @@
     }
 
     @include respond-to(xs) {
-      @include font(15px, $bold);
+      @include font(25px, $bold);
       padding: 2px;
     }
 
@@ -93,7 +99,7 @@
 
 .nav-pills .nav-item.show .nav-link--tabs,
 .nav-pills .nav-link--tabs.active {
-  color: #495057;
+  color: #4A4A4A;
   background-color: #fff;
   border: 4px solid #707070;
   border-radius: 7px;
