--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -229,6 +229,12 @@ body {
   }
 }
 
+@media (min-width: 1601px) and (max-width: 2048px) {
+  .main-banner__content .slick-next {
+    right: 45%;
+  }
+}
+
 .main-banner__content .slick-next:before {
   font-size: 25px;
   color: #fff;
@@ -251,6 +257,12 @@ body {
   transform: translateX(-44%);
   width: 0%;
   position: absolute;
+}
+
+@media (min-width: 1601px) and (max-width: 2048px) {
+  .main-banner__content .slick-dots {
+    bottom: 6%;
+  }
 }
 
 .main-banner__content .slick-dots .slick-active button:before {
@@ -1052,12 +1064,20 @@ button {
   border-bottom: 1px solid transparent;
 }
 
+@media (min-width: 0px) and (max-width: 767px) {
+  .nav-pills {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .nav-pills .nav-link--tabs {
   transition: 0.3s ease-in-out;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ostrich Sans";
   border: 4px solid transparent;
   color: #B4B4B4;
   padding: 10px;
@@ -1072,7 +1092,7 @@ button {
 
 @media (min-width: 0px) and (max-width: 767px) {
   .nav-pills .nav-link--tabs {
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 700;
     padding: 2px;
   }
@@ -1084,7 +1104,7 @@ button {
 
 .nav-pills .nav-item.show .nav-link--tabs,
 .nav-pills .nav-link--tabs.active {
-  color: #495057;
+  color: #4A4A4A;
   background-color: #fff;
   border: 4px solid #707070;
   border-radius: 7px;
@@ -1321,6 +1341,7 @@ label.label--white {
   color: #fff;
   font-size: 14px;
   font-weight: 700;
+  margin-bottom: 0;
 }
 
 label.label-cap {
@@ -2199,7 +2220,7 @@ button:focus {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Ostrich Sans";
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0px 10px;
   border-radius: 5px;
 }
@@ -2217,12 +2238,12 @@ button:focus {
 
 .nav-link.fixed-color:hover {
   color: #000;
-  border: 1px solid #000;
+  border: 2px solid #000;
   border-radius: 5px;
 }
 
 .nav-link.fixed-color.active {
-  border: 1px solid #000;
+  border: 2px solid #000;
   padding: 0px 10px;
   border-radius: 5px;
 }
@@ -2234,18 +2255,18 @@ button:focus {
 
 .nav-link.nav-link-bc:hover {
   color: #000;
-  border: 1px solid #000;
+  border: 2px solid #000;
   border-radius: 5px;
 }
 
 .nav-link.nav-link-bc.active {
-  border: 1px solid #000;
+  border: 2px solid #000;
   padding: 0px 10px;
   border-radius: 5px;
 }
 
 .nav-link.active {
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   padding: 0px 10px;
   border-radius: 5px;
 }
@@ -2347,7 +2368,7 @@ button:focus {
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -2997,7 +3018,7 @@ button:focus {
 
 @media (min-width: 0px) and (max-width: 767px) {
   .main-why__item.main-why__item--event {
-    padding: 110px 0;
+    padding: 110px 0 30px;
   }
 }
 
@@ -3044,6 +3065,7 @@ button:focus {
 @media (min-width: 0px) and (max-width: 767px) {
   .main-footer__content {
     grid-template-columns: 1fr;
+    padding: 50px 0 10px 0;
   }
 }
 
