font family btn poke

--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -107,6 +107,7 @@ button {
   justify-content: center;
   text-transform: uppercase;
   font-weight: $superBold;
+  font-family: $Ostrich;
 
   img {
     width: 30px;
