deteled links last

--- a/app/index.haml
+++ b/app/index.haml
@@ -185,20 +185,20 @@
                 %p mas informacion
               %ul
                 %li 
-                  %a{ :href=>"#"}
+                  %a{ :href=>"experience.html"}
                     ESCRÍBENOS
                 %li 
                   %a{ :href=>"work.html"}
                     TRABAJA CON NOSOTROS
-                %li 
-                  %a{ :href=>"#"}
-                    CUÉNTANOS TU EXPERIENCIA
-                %li 
-                  %a{ :href=>"#"}
-                    TERMINOS Y CONDICIONES
-                %li 
-                  %a{ :href=>"#"}
-                    POLITICA DE PRIVACIDAD
+                // %li 
+                //   %a{ :href=>"#"}
+                //     CUÉNTANOS TU EXPERIENCIA
+                // %li 
+                //   %a{ :href=>"#"}
+                //     TERMINOS Y CONDICIONES
+                // %li 
+                //   %a{ :href=>"#"}
+                //     POLITICA DE PRIVACIDAD
               
           .main-footer__item
             .main-footer__box
