--- a/app/experience.haml
+++ b/app/experience.haml
@@ -156,15 +156,15 @@
                 %li 
                   %a{ :href=>"work.html"}
                     TRABAJA CON NOSOTROS
-                %li 
-                  %a{ :href=>"experience.html"}
-                    CUÉNTANOS TU EXPERIENCIA
-                %li 
-                  %a{ :href=>"#"}
-                    TERMINOS Y CONDICIONES
-                %li 
-                  %a{ :href=>"#"}
-                    POLITICA DE PRIVACIDAD
+                // %li 
+                //   %a{ :href=>"experience.html"}
+                //     CUÉNTANOS TU EXPERIENCIA
+                // %li 
+                //   %a{ :href=>"#"}
+                //     TERMINOS Y CONDICIONES
+                // %li 
+                //   %a{ :href=>"#"}
+                //     POLITICA DE PRIVACIDAD
               
           .main-footer__item
             .main-footer__box
